--- a/Algorithms/Algorithms/Algorithms.vcxproj
+++ b/Algorithms/Algorithms/Algorithms.vcxproj
@@ -14,10 +14,12 @@
     <ClCompile Include="..\Main.cpp" />
     <ClCompile Include="..\MatrixTerm.cpp" />
     <ClCompile Include="..\SparseMatrix.cpp" />
+    <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MatrixTerm.h" />
     <ClInclude Include="..\SparseMatrix.h" />
+    <ClInclude Include="String.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{25CF10A4-C10D-441E-9879-5B581FF5C97E}</ProjectGuid>
