--- a/Algorithms/Algorithms/Algorithms.vcxproj.filters
+++ b/Algorithms/Algorithms/Algorithms.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="..\SparseMatrix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="String.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MatrixTerm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\SparseMatrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="String.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
