--- a/Algorithms/Algorithms/Algorithms.vcxproj.filters
+++ b/Algorithms/Algorithms/Algorithms.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="String.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bag.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MatrixTerm.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="String.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bag.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
