--- a/Algorithms/Algorithms/Algorithms.vcxproj
+++ b/Algorithms/Algorithms/Algorithms.vcxproj
@@ -14,11 +14,13 @@
     <ClCompile Include="..\Main.cpp" />
     <ClCompile Include="..\MatrixTerm.cpp" />
     <ClCompile Include="..\SparseMatrix.cpp" />
+    <ClCompile Include="Bag.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MatrixTerm.h" />
     <ClInclude Include="..\SparseMatrix.h" />
+    <ClInclude Include="Bag.h" />
     <ClInclude Include="String.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
