--- a/Algorithms/Algorithms/Algorithms.vcxproj
+++ b/Algorithms/Algorithms/Algorithms.vcxproj
@@ -20,6 +20,7 @@
     <ClInclude Include="..\MatrixTerm.h" />
     <ClInclude Include="..\SparseMatrix.h" />
     <ClInclude Include="Bag.h" />
+    <ClInclude Include="Stack.h" />
     <ClInclude Include="String.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
