--- a/Algorithms/Algorithms/Algorithms.vcxproj.filters
+++ b/Algorithms/Algorithms/Algorithms.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Bag.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
