--- a/Algorithms/Algorithms/Algorithms.vcxproj
+++ b/Algorithms/Algorithms/Algorithms.vcxproj
@@ -14,12 +14,14 @@
     <ClCompile Include="..\Main.cpp" />
     <ClCompile Include="..\MatrixTerm.cpp" />
     <ClCompile Include="..\SparseMatrix.cpp" />
+    <ClCompile Include="Maze.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MatrixTerm.h" />
     <ClInclude Include="..\SparseMatrix.h" />
     <ClInclude Include="Bag.h" />
+    <ClInclude Include="Maze.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="String.h" />
   </ItemGroup>
