--- a/Algorithms/Algorithms/Algorithms.vcxproj
+++ b/Algorithms/Algorithms/Algorithms.vcxproj
@@ -14,7 +14,6 @@
     <ClCompile Include="..\Main.cpp" />
     <ClCompile Include="..\MatrixTerm.cpp" />
     <ClCompile Include="..\SparseMatrix.cpp" />
-    <ClCompile Include="List.cpp" />
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
@@ -23,6 +22,7 @@
     <ClInclude Include="..\SparseMatrix.h" />
     <ClInclude Include="Bag.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="ListIterator.h" />
     <ClInclude Include="Maze.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="String.h" />
